--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="lib/styles/global-variable-styles.css">
     <link rel="stylesheet" href="lib/styles/main-styles.css">
     <link rel="stylesheet" href="lib/styles/obsidian.css">
+    <script src="https://cdn.jsdelivr.net/npm/minisearch@6.1.0/dist/umd/index.min.js"></script>
 </head>
 <body>
     <div class="webpage-container">
@@ -24,6 +25,38 @@
         window.onload = async function() {
             await initializePage();
         };
+
+        // 定义缺失的函数
+        async function loadIncludes() {
+            // 空实现
+            return;
+        }
+
+        async function isTouchCapable() {
+            return ('ontouchstart' in window);
+        }
+
+        // 添加解析URL参数的函数
+        function parseURLParams() {
+            const url = new URL(window.location.href);
+            const mark = url.searchParams.get("mark");
+            const query = url.searchParams.get("query");
+            const hash = decodeURI(url.hash);
+
+            if (mark) searchCurrentDocument(mark);
+            if (query) search(query);
+            if (hash) {
+                const element = document.getElementById(hash.substring(1));
+                if (element) scrollIntoView(element, {behavior: "smooth", block: "start"});
+                else console.log("Heading not found: " + hash);
+            }
+        }
+
+        // 添加获取URL路径的函数
+        function getURLPath(path = window.location.pathname) {
+            if (absoluteBasePath == null) setupRootPath(document);
+            return path.replace(absoluteBasePath, "");
+        }
     </script>
 </body>
 </html>
